riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_enum_with_associated_optional.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_enum(&e)
---
public enum SearchResult: Hashable, Equatable, Sendable {
    case found(0: String)
    case notFound

    @inlinable static func decode(wireBuffer wire: WireBuffer, at offset: Int) -> (value: SearchResult, size: Int) {
        let tag = wire.readI32(at: offset)
        var pos = offset + 4
        switch tag {
        case 0:
            let 0 = { let (v, s) = wire.readString(at: pos); pos += s; return v }()
            return (.found(0: 0), pos - offset)
        case 1:
            return (.notFound, pos - offset)
        default:
            fatalError("Invalid SearchResult tag: \(tag)")
        }
    }
}

extension SearchResult: WireEncodable {
    @usableFromInline static var isBlittable: Bool { false }

    @inlinable func wireEncodedSize() -> Int {
        switch self {
        case let .found(0):
            return 4 + (4 + 0.utf8.count)
        case .notFound:
            return 4
        }
    }

    @inlinable func wireEncodeTo(_ data: inout Data) {
        switch self {
        case let .found(0):
            data.appendI32(0)
            data.appendString(0)
        case .notFound:
            data.appendI32(1)
        }
    }

    @inlinable func wireEncodeToBytes(_ bytes: inout [UInt8]) {
        switch self {
        case let .found(0):
            bytes.appendI32(0)
            bytes.appendString(0)
        case .notFound:
            bytes.appendI32(1)
        }
    }
}
