riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_enum_with_variant_docs.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_enum(&e)
---
/// A cardinal compass direction.
public enum Direction: Int32, Hashable, Sendable, CaseIterable {
    /// Pointing toward the north pole.
    case north = 0
    case south = 1

    @usableFromInline init(fromC c: Int32) { self = Direction(rawValue: c)! }
    @usableFromInline var cValue: Int32 { rawValue }

    @inlinable static func decode(wireBuffer wire: WireBuffer, at offset: Int) -> (value: Direction, size: Int) {
        (Direction(rawValue: wire.readI32(at: offset))!, 4)
    }
}

extension Direction: WireEncodable {
    @usableFromInline static var isBlittable: Bool { true }
    @inlinable func wireEncodedSize() -> Int { 4 }
    @inlinable func wireEncodeTo(_ data: inout Data) { data.appendI32(rawValue) }
    @inlinable func wireEncodeToBytes(_ bytes: inout [UInt8]) { bytes.appendI32(rawValue) }
}
