riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_record_with_field_docs.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_record(&record)
---
/// A physical location with coordinates.
public struct Location: Hashable, Equatable, Sendable {
    /// Unique identifier for this location.
    public var id: Int64
    /// Latitude in decimal degrees.
    public var lat: Double

    public init(id: Int64, lat: Double) {
        self.id = id
        self.lat = lat
    }

    @inlinable static func decode(wireBuffer wire: WireBuffer, at offset: Int) -> (value: Location, size: Int) {
        return (Location(id: wire.readI64(at: offset), lat: wire.readF64(at: offset + 8)), 16)
    }
}

extension Location: WireEncodable {
    @usableFromInline static var isBlittable: Bool { true }
    @inlinable func wireEncodedSize() -> Int { 16 }
    @inlinable func wireEncodeTo(_ data: inout Data) {
        var copy = self
        Swift.withUnsafeBytes(of: &copy) { data.append(contentsOf: $0) }
    }
    @inlinable func wireEncodeToBytes(_ bytes: inout [UInt8]) {
        var copy = self
        Swift.withUnsafeBytes(of: &copy) { bytes.append(contentsOf: $0) }
    }
}
