riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_record_with_optional_field.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_record(&record)
---
public struct UserProfile: Hashable, Equatable, Sendable {
    public var name: String
    public var bio: String?

    public init(name: String, bio: String?) {
        self.name = name
        self.bio = bio
    }

    @inlinable static func decode(wireBuffer wire: WireBuffer, at offset: Int) -> (value: UserProfile, size: Int) {
        var pos = offset
        let name_v = { let (v, s) = wire.readString(at: pos); pos += s; return v }()
        let bio_v = { let (v, s) = wire.readOptional(at: pos, reader: { wire.readString(at: $0) }); pos += s; return v }()
        return (UserProfile(name: name_v, bio: bio_v), pos - offset)
    }
}

extension UserProfile: WireEncodable {
    @usableFromInline static var isBlittable: Bool { false }
    @inlinable func wireEncodedSize() -> Int {
        var size = 0
        size += (4 + name.utf8.count)
        size += (bio.map { v in 1 + (4 + v.utf8.count) } ?? 1)
        return size
    }
    @inlinable func wireEncodeTo(_ data: inout Data) {
        data.appendString(name)
        if let v = bio { data.appendU8(1); data.appendString(v) } else { data.appendU8(0) }
    }
    @inlinable func wireEncodeToBytes(_ bytes: inout [UInt8]) {
        bytes.appendString(name)
        if let v = bio { bytes.appendU8(1); bytes.appendString(v) } else { bytes.appendU8(0) }
    }
}
