riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_sync_function_returning_optional.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_function(&func, \"riff\")"
---
public func findUser(id: Int64) -> String? {
    let buf = riff_find_user(id)
    defer { riff_free_buf_u8(buf) }
    let wire = WireBuffer(ptr: buf.ptr!, len: Int(buf.len))
    return wire.readOptional(at: 0, reader: { wire.readString(at: $0) }).value
}
