riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_sync_function_returning_primitive.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_function(&func, \"riff\")"
---
public func add(a: Int32, b: Int32) -> Int32 {
    return riff_add(a, b)
}
