riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_sync_function_with_multiple_string_params.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_function(&func, \"riff\")"
---
public func concat(a: String, b: String) -> String {
    var a = a
    var b = b
    return a.withUTF8 { aBuf in
        return b.withUTF8 { bBuf in
            let buf = riff_concat(aBuf.baseAddress!, UInt(aBuf.count), bBuf.baseAddress!, UInt(bBuf.count))
            defer { riff_free_buf_u8(buf) }
            return riffDecodeOwnedBuf(buf.ptr, Int(buf.len)) { reader in reader.readString() }
        }
    }
}
