riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_sync_function_with_string_param.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_function(&func, \"riff\")"
---
public func greet(name: String) -> String {
    return name.withCString { namePtr in
        let buf = riff_greet(UnsafeRawPointer(namePtr).assumingMemoryBound(to: UInt8.self), UInt(name.utf8.count))
        defer { riff_free_buf_u8(buf) }
        let wire = WireBuffer(ptr: buf.ptr!, len: Int(buf.len))
        return wire.readString(at: 0).value
    }
}
